# ghost

./: .gitignore  README.md  pyproject.toml
codigo/: functions.py  main.py  testes.py
